--- a/GoogleRipTest.html
+++ b/GoogleRipTest.html
@@ -16,9 +16,9 @@
 			<li><a href="#">bell in circle</a></li>
 			<li><a href="#">pic in circle</a></li>
 		</ul>
-
-			<img src="logo11w.png" width="200" height="100">
-			<input type="text" value="whatever" size="52" maxlenght="488"></input>
+        
+		<img src="logo11w.png" width="200" height="100"></br>
+		<input type="text" value="whatever" size="52" maxlenght="488"></input></br>
 
 		<div id="dummyButtons">	
 			<p>oole Search</p>
