--- a/GoogleRipTest.html
+++ b/GoogleRipTest.html
@@ -17,22 +17,23 @@
 			<li><a href="#">pic in circle</a></li>
 		</ul>
         
-		<img src="logo11w.png" width="200" height="100"></br>
-		<input type="text" value="whatever" size="52" maxlenght="488"></input></br>
+		<img src="logo11w.png" width="300" height="150"></br>
+		<input type="text" value="whatever" size="75" maxlenght="50%"></input></br>
 
 		<div id="dummyButtons">	
 			<p>oole Search</p>
-			<p>I'm feeling horny</p>
+			<p>I'm feeling lucky</p>
 		</div>
 
 		<footer>
-			<ul id="footer">
-				<li><a href="#">Advertising</a></li>
-				<li><a href="#">Advertising</a></li>
-				<li><a href="#">Advertising</a></li>
-				<li><a href="#">Advertising</a></li>
-				<li><a href="#">Advertising</a></li>
-				<li><a href="#">Advertising</a></li>
+			<ul>
+				<li class="left"><a href="#">Advertising</a></li>
+				<li class="left"><a href="#">Business</a></li>
+				<li class="left"><a href="#">About</a></li>
+
+				<li class="right"><a href="#">Privacy</a></li>
+				<li class="right"><a href="#">Terms</a></li>
+				<li class="right"><a href="#">Settings</a></li>
 			</ul>
 		</footer>
 
